fixed recaptcha margin

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -82,7 +82,7 @@
           </label>
         </div>
       </div>
-      <div data-netlify-recaptcha="true"></div>
+      <div class="mt-6" data-netlify-recaptcha="true"></div>
       <button
         class="bg-amber-700 text-base py-2 px-6 mt-2 sm:mt-8 rounded text-white transition-colors hover:bg-orange-500"
       >
