further enhanced styles moved .vtt file to pub dir

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import Hiring from "../components/Hiring.astro";
         default
         kind="captions"
         srclang="eng"
-        src="../assets/sgl-trucking-ltd.vtt"
+        src="/sgl-trucking-ltd.vtt"
       />
     </video>
     <div
