added generator and sitemap integration. fixed some spelling error on index, made a robots.txt, adjusted social media buttons uneeded margin on desktop view.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,13 +30,14 @@ const { title } = Astro.props;
       content="SGL Trucking Ltd. located in Surrey / Delta BC, Canada. Transnational carrier service. Offering unmatched reliability, SGL Trucking is the best transportation company in The Greater Vancouver Region, with years of reputable experience."
     />
     <meta property="og:site_name" content="101 Vinylz" />
-    <meta property="og:url" content="https://www.101vinylz.com" />
+    <!-- <meta property="og:url" content="https://www.sgltrucking.com" /> -->
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <!-- <meta name="generator" content={Astro.generator} /> -->
+    <meta name="generator" content={Astro.generator} />
+    <meta name="sitemap" content="/sitemap-index.xml" />
     <title>{title}</title>
   </head>
   <body class="relative">
