--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -249,7 +249,7 @@ import Hiring from "../components/Hiring.astro";
             <button
               class="bg-amber-700 border border-amber-500 text-base py-2 px-6 rounded text-white transition-colors hover:bg-orange-500"
             >
-              More on the Environement
+              More on the Environment
             </button>
           </a>
         </div>
